[gd_scene load_steps=7 format=3 uid="uid://661yowfr14uv"]

[ext_resource type="Texture2D" uid="uid://bs3mjr5txlsp7" path="res://assets/backgrounds/anjinho.jpg" id="1_7su7r"]
[ext_resource type="Script" path="res://scripts/layers/game_over.gd" id="1_w37j8"]
[ext_resource type="FontFile" uid="uid://b652jstmymcxh" path="res://assets/texts/splurge.ttf" id="2_votg6"]
[ext_resource type="Texture2D" uid="uid://bguniam8u3fvb" path="res://assets/texts/monica.png" id="3_gfpxd"]
[ext_resource type="Texture2D" uid="uid://vk7alphvgs1i" path="res://assets/GUI/settings.png" id="4_vm2ll"]
[ext_resource type="Texture2D" uid="uid://bc08lvay4ro6l" path="res://assets/GUI/exit-door.png" id="5_g4gl1"]


[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w37j8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7su7r")

[node name="TitleSection" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 407.0
offset_bottom = 234.0
alignment = 1
metadata/_edit_group_ = true

[node name="TurmaDa" type="Label" parent="TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.94902, 0.0196078, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_votg6")
theme_override_font_sizes/font_size = 30
text = "Turma da"
horizontal_alignment = 1

[node name="Mônica" type="TextureRect" parent="TitleSection"]
layout_mode = 2
texture = ExtResource("3_gfpxd")
stretch_mode = 5

[node name="Em" type="Label" parent="TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.94902, 0.0196078, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_votg6")
theme_override_font_sizes/font_size = 30
text = "em"
horizontal_alignment = 1

[node name="FugaDosPets" type="Label" parent="TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.94902, 0.0196078, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_votg6")
theme_override_font_sizes/font_size = 50
text = "Fuga dos Pets"
horizontal_alignment = 1

[node name="SettingsBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0164931
anchor_top = 0.844136
anchor_right = 0.0876741
anchor_bottom = 0.969136
tooltip_text = "Configurações"
icon = ExtResource("4_vm2ll")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -376.0
offset_top = -148.0
offset_right = 323.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Jogar"
theme_override_colors/font_color = Color(0.92549, 0.109804, 0.156863, 1)
theme_override_colors/font_pressed_color = Color(0.623529, 0.0627451, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.192157, 0.207843, 1)
theme_override_colors/font_focus_color = Color(0.984314, 0.192157, 0.207843, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_votg6")
theme_override_font_sizes/font_size = 80
text = "Jogar Novamente"
flat = true

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -102.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Sair"
icon = ExtResource("5_g4gl1")
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -21.0
offset_right = 646.0
offset_bottom = 113.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Infelizmente, você tropeçou... Mas não se preocupe, o Anjinho está aqui para te dar uma mãozinha de volta."
autowrap_mode = 2

[connection signal="pressed" from="SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
